# ESOData

./: .gitmodules  CMakeLists.txt  ESOProjectedFilesystem.ini  README.md
Directives/Database/Defs/: AbilityDef.dir  AchievementDef.dir  ActiveCombatTipDef.dir  AppearanceDef.dir  BattleStandardDef.dir  BiomeDef.dir  CampaignRulesetDef.dir  CharacterSliderDef.dir  ClickableDef.dir  CollectibleDef.dir  ConversationDef.dir  DeathRecapHintDef.dir  DyeDef.dir  FastTravelGraveyardDef.dir  FurnitureDataDef.dir  FxAnimChoreoDef.dir  FxBeamDef.dir  FxCameraShakeDef.dir  FxEmitterDef.dir  FxLightDef.dir  FxMaterialDef.dir  FxMovementDef.dir  FxProjectileDef.dir  FxTelegraphDef.dir  FxWeatherDef.dir  GlobalAnimationDef.dir  GlobalAudioDef.dir  GlobalCharacterPoseListDef.dir  GlobalCombatDataDef.dir  GlobalFxDataDef.dir  GlobalItemDataDef.dir  HookpointStoreDef.dir  HouseDef.dir  InteractableModelDef.dir  InteractionCameraDef.dir  ItemAbilityScalingDef.dir  ItemQualityDef.dir  ItemSetDef.dir  ItemTagDef.dir  ItemTemplateDef.dir  (+34 more)
Directives/Database/Structs/: BaseDef.dir  LootCrateParticleInfo.dir  QuestAssist.dir
ESOData/: CMakeLists.txt
ESOData-test/: CMakeLists.txt  main.cpp
ESOData/Cryptography/: CNGAlgorithmProvider.cpp  CNGHash.cpp  CNGKey.cpp  CNGRandom.cpp  CNGSecret.cpp
ESOData/Database/: AssetReference.cpp  CompiledDef.cpp  DatabaseAddressing.cpp  DatabaseManager.cpp  DefFile.cpp  DefFileIndex.cpp  ESODatabase.cpp  ESODatabaseDef.cpp  ESODatabaseParsingContext.cpp  ESODatabaseRecord.cpp
ESOData/Depot/: ESODepot.cpp
ESOData/Directives/: DatabaseDirectiveFile.cpp  DirectiveFile.cpp  FilenameHarvestingDirectiveFile.cpp  FilesystemDirectiveFile.cpp  SupportedVersionsDirectiveFile.cpp
ESOData/Filesystem/: Archive.cpp  DataFileHeader.cpp  FileSignature.cpp  FileTable.cpp  Filesystem.cpp  MNFFile.cpp  ManifestFileEntry.cpp
ESOData/Granny2/: ESOGraphicsTypes.cpp  Granny2TypeHelpers.cpp
ESOData/IO/: IOUtilities.cpp
ESOData/Oodle/: oodle.cpp  oodle.h
ESOData/Serialization/: DeflatedSegment.cpp  Hash.cpp  InputSerializationStream.cpp  OutputSerializationStream.cpp  SerializationStream.cpp
ESOData/World/: FixtureFile.cpp  WorldAddressing.cpp  WorldTableOfContents.cpp  WorldTerrain.cpp
ESOData/include/ESOData/Cryptography/: CNGAlgorithmProvider.h  CNGHash.h  CNGKey.h  CNGRandom.h  CNGSecret.h
ESOData/include/ESOData/Database/: AssetReference.h  CompiledDef.h  DatabaseAddressing.h  DatabaseManager.h  DefFile.h  DefFileIndex.h  ESODatabase.h  ESODatabaseDef.h  ESODatabaseParsingContext.h  ESODatabaseRecord.h  ForeignKey.h  PolymorphicReference.h
ESOData/include/ESOData/Depot/: ESODepot.h  IDepotLoadingCallback.h
ESOData/include/ESOData/Directives/: DatabaseDirectiveFile.h  DirectiveFile.h  FilenameHarvestingDirectiveFile.h  FilesystemDirectiveFile.h  SupportedVersionsDirectiveFile.h
ESOData/include/ESOData/Filesystem/: Archive.h  DataFileHeader.h  FileSignature.h  FileTable.h  Filesystem.h  MNFFile.h  ManifestFileEntry.h
ESOData/include/ESOData/Granny2/: ESOGraphicsTypes.h  Granny2TypeHelpers.h
ESOData/include/ESOData/IO/: IOUtilities.h
ESOData/include/ESOData/Serialization/: DeflatedSegment.h  Hash.h  HashTable.h  InputSerializationStream.h  OutputSerializationStream.h  SerializationStream.h  SizedSegment.h  SizedVector.h
ESOData/include/ESOData/World/: FixtureFile.h  WorldAddressing.h  WorldTableOfContents.h  WorldTerrain.h
ESODataCompiledParser/: CMakeLists.txt
ESODefCompiler/: CMakeLists.txt  ESODefCompiler.cpp  ESODefCompiler.h  main.cpp
ESOProjectedFilesystem/: CMakeLists.txt  Inode.cpp  Inode.h  ProjectedFilesystem.cpp  ProjectedFilesystem.h  main.cpp
